# appauto

./: .flake8  .gitignore  .pdm-python  README.md  conftest.py  demo.jenkinsfile  pyproject.toml  test_yml.yml
docs/: PACKAGING.md
jenkins/: demo.jenkinsfile  deploy_amaas.jenkinsfile  deploy_ft.jenkinsfile  gen_license.jenkinsfile  test_amaas_ci_sanity_check.jenkinsfile  test_ft_ci_sanity_check.jenkinsfile  test_sglang_night.jenkinsfile
scripts/: convert_json_to_csv.py  convert_md_table_to_csv.py  draw_mtp_tps.py  eval_swebench.py  eval_tool_call.py  eval_via_evalscope_v10x.py  eval_vlm.py  hardware_info.sh  merge_excels.py  openai_chat_demo.py  openai_chat_demo_no_chat_template.py  parse_csv.py  perf_custom_dataset.py  perf_random_dataset.py  perf_vlm.py  run_eval_via_evalscope.py  run_eval_via_evalscope_v01x.py  run_eval_via_evalscope_v100.py  run_perf_via_evalscope_custom_dataset.py  run_perf_via_evalscope_random_dataset.py  setup_bash_log.sh  setup_env.sh  setup_evalscope.sh  setup_zsh.sh  test_4090_speed_via_evalscope.py  test_perf_via_evalscope.py  test_perf_via_evalscope_and_gen_csv.py  yaochen_test_sglang_hicache.py
src/appauto/: __init__.py  cli.py
src/appauto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/appauto/assets/: ci_test.image
src/appauto/env/: __init__.py  base_deploy.py
src/appauto/operator/: __init__.py
src/appauto/organizer/: constructor.py
src/appauto/runners/: pytest_runner.py  ui_runner.py  yaml_case.yml
src/appauto/validator/: __init__.py  common.py
testcases/amaas/: gen_data.py
testcases/amaas/api/: conftest.py  test_batch_query_load_balance.py  test_model_store_base.py  test_models_base.py  test_moe_model_concurrenct_access_manage.py
testcases/api/demo/: gen_data.py  (+1 more)
testcases/demo/: test_appauto_demo.py
testcases/ftransformers/: conftest.py  gen_data.py
testcases/ui/: test_ui_demo.py
tests/: conftest.py
tests/test_cases/: example_test.yaml
(+222 files in other folders)
